# soccerbot

./: .cmake-format.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mxproject  .pre-commit-config.yaml  .prettierignore  .prettierrc  .project  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  Untitled Diagram.drawio  amcl  bdock  compose.yaml  deploy_background_build.sh  deploy_build_ros_model.sh  dock  docker-commit  docker-compose.dual.yaml  docker-compose.full.yaml  docker-compose.game_controller.yaml  docker-compose.override.yaml  docker-compose.robot.bak.yaml  docker-compose.robot.new.yaml  docker-compose.robot.yaml  docker-compose.test.kick.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-run  frames.gv  imu_servo_bridge_full.ioc  np.REMOVED.git-id  os.REMOVED.git-id  (+12 more)
acrobot_description/: package.xml
acrobot_description/launch/: acrobot.launch
acrobot_description/meshes/: leg1.stl  leg2.stl
acrobot_description/models/: imu.xacro
acrobot_description/rviz/: acrobot.rviz
bez2_description/: CMakeLists.txt  package.xml
bez2_description/Bez2_meshes/: Arm_Assembly-bez3_v12_1.stl  Arm_Assembly-bez3_v12_2.stl  Hip_Printable_v2_v10_1.stl  Hip_Printable_v2_v10_2.stl  New_left_foot_upperhalf_v5_1.stl  New_right_foot_upperhalf_v3_1.stl  Upper_left_leg_support__bottom__v8_1.stl  Upper_left_leg_support__bottom__v8_2.stl  ankle_motors_v4_1.stl  ankle_motors_v4_2.stl  base_link.stl  biceps_v3_1.stl  biceps_v3_2.stl  camera_point_1.stl  custom_servo_support__middle_neck__v9_1.stl  head_v4_1.stl  hip_motors_v4_1.stl  hip_motors_v4_2.stl  imu_1.stl  left_hand_1.stl  lower_leg_v4_1.stl  lower_leg_v4_2.stl  right_hand_1.stl
bez2_description/config/: motor_mapping.yaml  soccerbot_control.yaml
bez2_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  rviz.launch
bez2_description/meshes/: Arm_Assembly-bez3_v10_1.stl  Arm_Assembly-bez3_v10_2.stl  Arm_Assembly-bez3_v12_1.dae  Arm_Assembly-bez3_v12_1.stl  Arm_Assembly-bez3_v12_2.dae  Arm_Assembly-bez3_v12_2.stl  HingeJointWithBacklash.proto  Hip_Printable_v2_v10_1.dae  Hip_Printable_v2_v10_1.stl  Hip_Printable_v2_v10_2.dae  Hip_Printable_v2_v10_2.stl  Hip_Printable_v2_v9_1.stl  Hip_Printable_v2_v9_2.stl  MX-64AT_AR_v1_1.stl  MX-64AT_AR_v1_2.stl  New_left_foot_upperhalf_v4_1.stl  New_left_foot_upperhalf_v5_1.dae  New_left_foot_upperhalf_v5_1.stl  New_right_foot_upperhalf_v2_1.stl  New_right_foot_upperhalf_v3_1.dae  New_right_foot_upperhalf_v3_1.stl  Upper_left_leg_support__bottom__v7_1.stl  Upper_left_leg_support__bottom__v7_2.stl  Upper_left_leg_support__bottom__v8_1.dae  Upper_left_leg_support__bottom__v8_1.stl  Upper_left_leg_support__bottom__v8_2.dae  Upper_left_leg_support__bottom__v8_2.stl  ankle_motors_v2_1.stl  ankle_motors_v2_2.stl  ankle_motors_v3_1.stl  ankle_motors_v3_2.stl  ankle_motors_v4_1.dae  ankle_motors_v4_1.stl  ankle_motors_v4_2.dae  ankle_motors_v4_2.stl  back_panel_1.stl  base_link.dae  base_link.stl  battery_1.stl  battery_support_1.stl  (+94 more)
bez2_description/scripts/: convert_stl2dae.py  declare_externproto.py  main.py  modify_proto.py  search.py  simplify_stl.py  split_file.py
bez2_description/urdf/: Bez2.proto  Bez2Robocup.proto  Bez2_.proto  bez2.gazebo  bez2.trans  bez2.urdf  bez2.xacro  bez2_simple.urdf  bez2_simple_collision_units_meter.urdf  bez2_units_meter.urdf  bez2_units_millimeter.urdf  materials.xacro  test.txt
bez3_description/: CMakeLists.txt  package.xml
bez3_description/config/: .motor_mapping.yaml.swn  .motor_mapping.yaml.swo  motor_mapping.yaml  soccerbot_control.yaml
bez3_description/launch/: gazebo.launch  rviz.launch
bez3_description/meshes/: 25t-servo-hub_1.stl  25t-servo-hub_2.stl  25t-servo-hub_3.stl  25t-servo-hub_4.stl  25t-servo-hub_Mirror__1.stl  25t-servo-hub_Mirror__2.stl  Component32_1.stl  JX_servo_v12_1.stl  JX_servo_v12_11.stl  JX_servo_v12_12.stl  JX_servo_v12_13.stl  JX_servo_v12_14.stl  JX_servo_v12_15.stl  JX_servo_v12_16.stl  JX_servo_v12_17.stl  JX_servo_v12_18.stl  JX_servo_v12_19.stl  JX_servo_v12_8.stl  JX_servo_v12_9.stl  JX_servo_v8_1.stl  JX_servo_v8_11.stl  JX_servo_v8_12.stl  JX_servo_v8_13.stl  JX_servo_v8_14.stl  JX_servo_v8_15.stl  JX_servo_v8_16.stl  JX_servo_v8_17.stl  JX_servo_v8_18.stl  JX_servo_v8_19.stl  JX_servo_v8_8.stl  JX_servo_v8_9.stl  TX2_board_v2_1.stl  base_link.stl  camera-link_1.stl  camera_1.stl  custom_servo_support__lower_neck__v2_1.stl  elbow-attach_1.stl  elbow-attach_Mirror__1.stl  elbow-bearing_1.stl  elbow-bearing_Mirror__1.stl  (+26 more)
bez3_description/urdf/: bez3.gazebo  bez3.trans  bez3.urdf  bez3.xacro  bez3_simple.urdf  materials.xacro
control_center/: .gitignore  CMakeLists.txt  README.md  app.py  package.xml
control_center/config/: config.yaml
control_center/control_center/: __init__.py  (+2 more)
foundation/: CMakeLists.txt  package.xml
game_controller_interface/: package.xml  setup.cfg  setup.py
soccer_common/: CMakeLists.txt  credentials.json  package.xml  setup.cfg  setup.py  team.json
soccer_control/: .gitignore  CMakeLists.txt  build_ros_model.sh  controlNode.m  main.m  mx28.slx  package.xml  recreate_model.m  robotParameters.m  soccer_control.slx  soccer_control_generated.slx  soccerbot.slx  startup.m  test.m
soccer_description/: CMakeLists.txt  README.md  package.xml
soccer_embedded/: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  Robot\Robot_F7.cfg  package.xml
soccer_fieldline_detection/: CMakeLists.txt  package.xml
soccer_firmware_interface/: CMakeLists.txt  package.xml
soccer_geometry/: CMakeLists.txt  package.xml  setup.py
soccer_hardware/: .project  CMakeLists.txt  package.xml
soccer_localization/: CMakeLists.txt  README.md  package.xml  setup.py
soccer_msgs/: CMakeLists.txt  package.xml
soccer_object_detection/: CMakeLists.txt  data  package.xml  setup.py
soccer_object_localization/: CMakeLists.txt  package.xml
soccer_pycontrol/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
soccer_route_planner/: CMakeLists.txt  package.xml
(+13940 files in other folders)
