<?xml version="1.0"?>
<package format="2">
  <name>acrobot_description</name>
  <version>0.0.0</version>
  <description>The acrobot_description package</description>
  <maintainer email="vuwij@me.com">Jason Wang</maintainer>
  <license>BSD</license>
  <author email="vuwij@me.com">Jason Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
</package>
