<?xml version="1.0"?>
<package format="3">
  <name>bez3_description</name>
  <version>0.0.0</version>
  <description>The bez3_description package</description>
  <maintainer email="derek@lam.io">Derek Lam</maintainer>
  <license>BSD</license>
  <author email="derek@lam.io">Derek Lam</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ros_control</depend>
  <depend>effort_controllers</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}/models" />
  </export>
</package>
