<?xml version="1.0"?>
<package format="2">
  <name>control_center</name>
  <version>0.1.0</version>
  <description>The soccer monitoring api package</description>
  <maintainer email="anthonyjlem@gmail.com">Anthony Lem</maintainer>
  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosmon</depend>
  <depend>roscpp</depend>
  <depend>soccer_msgs</depend>

  <depend>supervisor</depend>
  <depend>python-scp</depend>
  <depend>python-yaml</depend>
  <depend>python-flask</depend>
  <depend>python-paramiko</depend>
  <depend>python-flask-cors-pip</depend>
  <depend>lighttpd</depend>
  <depend>gamin</depend>
  <depend>openssh-server</depend>
  <depend>sshpass</depend>

</package>
