<?xml version="1.0"?>
<package format="2">
    <name>foundation</name>
    <version>0.0.0</version>
    <description>Math libraries for soccer and omnibot projects</description>
    <maintainer email="lkunelk@gmail.com">nam</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <test_depend>rosunit</test_depend>
</package>
