<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_common</name>
  <version>0.0.0</version>
  <description>Contains common files refered by other modules</description>
  <maintainer email="vuwij@me.com">vuwij@me.com</maintainer>
  <license>BSD</license>


  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>soccer_msgs</depend>
  <export>
        <build_type>ament_python</build_type>
    </export>
</package>
