<?xml version="1.0"?>
<package format="2">
    <name>soccer_control</name>
    <version>0.0.0</version>
    <description>Matlab code for building the control</description>
    <maintainer email="vuwij@me.com">vuwij@me.com</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
