<?xml version="1.0"?>
<package format="2">
  <name>soccer_description</name>
  <version>0.0.0</version>
  <description>The soccer_description package</description>
  <maintainer email="vuwij@me.com">Jason Wang</maintainer>
  <license>BSD</license>
  <author email="vuwij@me.com">Jason Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ros_control</depend>
  <depend>effort_controllers</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}/models" />
  </export>
</package>
