<?xml version="1.0"?>
<package format="2">
    <name>soccer_fieldline_detection</name>
    <version>0.0.0</version>
    <description>The soccer_fieldline_detection package</description>

    <maintainer email="namnam.nguyen@utoronto.ca">nam</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>foundation</depend>
    <depend>libopencv-dev</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>sensor_msgs</depend>
    <depend>video_stream_opencv</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>pointcloud_to_laserscan</depend>
    <depend>geometry_msgs</depend>
    <depend>darknet_ros_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>ros-melodic-tf2-ros</depend>

</package>
