<?xml version="1.0"?>
<package format="2">
    <name>soccer_geometry</name>
    <version>0.0.0</version>
    <description>Contains all math libraries for soccer and omnibot projects</description>
    <maintainer email="lkunelk@gmail.com">nam</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
</package>
