<?xml version="1.0"?>
<package format="2">
  <name>soccer_msgs</name>
  <version>0.0.0</version>
  <description>The soccer_msgs package</description>

  <maintainer email="jiashen.wang@mail.utoronto.ca">Jason</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
